Cleaned up config